Adding some basic js to make the home page more functional

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,12 @@
 .post{
   width: 100%;
 }
+.hidden{
+  display: none;
+}
+.s-icon, .close{
+  color:white;
+}
 .profile-picture-profile{
   max-height: 20vh;
   aspect-ratio: 1/1;
@@ -27,14 +33,24 @@
     max-width: 90%;
     margin: 0 auto;
   }
+  nav{
+    max-width: 90%;
+    margin: 0 auto;
+  }
 }
 @media(min-width: 1000px){
   main{
     max-width:75%;
   }
+  nav{
+    max-width: 75%;
+  }
 }
 @media(min-width: 1200px){
   main{
+    max-width: 50%;
+  }
+  nav{
     max-width: 50%;
   }
 }
