--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,9 @@
 @import "variables.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
+a{
+  text-decoration: none;
+}
 .profile-picture{
   height:7vh; // I could not get the size working using bootstrap, tried with both vh-x, h-x, and mh-x but none of them actually resized the picture or the container
   
